zero-schema-derive/tests/ui/fail/02_nested_attributes.rs
use zero_schema_derive::ZeroSchema;
#[derive(ZeroSchema)] struct Bad<#[zero(align=2)] T> { value: for<#[zero(align=2)] 'a> fn(&'a T) }
fn main() {}
