zero-schema-derive/tests/ui/fail/02_nested_attributes.stderr
error: #[zero] is not allowed in this nested syntax
 --> tests/ui/fail/02_nested_attributes.rs:2:34
  |
2 | #[derive(ZeroSchema)] struct Bad<#[zero(align=2)] T> { value: for<#[zero(align=2)] 'a> fn(&'a T) }
  |                                  ^

error: #[zero] is not allowed in this nested syntax
 --> tests/ui/fail/02_nested_attributes.rs:2:67
  |
2 | #[derive(ZeroSchema)] struct Bad<#[zero(align=2)] T> { value: for<#[zero(align=2)] 'a> fn(&'a T) }
  |                                                                   ^
